--- a/src/textarea.module.scss
+++ b/src/textarea.module.scss
@@ -10,13 +10,18 @@
 .root{
     position: relative;
     --textarea-line-height: 1.5;
-    --textarea-font-size: 14px;
+    --textarea-font-size: 15px;
+    min-height: 100%;
+    width: 100%;
+
 
     .mainTextarea, .fake-textarea{
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
         line-height: var(--textarea-line-height);
         font-size: var(--textarea-font-size);
         resize: none;
         overflow-wrap: break-word;
+        width: 100%;
     }
 
     .mainTextarea{
