--- a/src/textarea.module.scss
+++ b/src/textarea.module.scss
@@ -11,7 +11,7 @@
     position: relative;
     --textarea-line-height: 1.5;
     --textarea-font-size: 15px;
-    min-height: 100%;
+    //min-height: 100%;
     width: 100%;
 
 
